# hpcourse

itmo/M4236/Nikulin/OCL/intel_ocl/: Dockerfile  setup.sh
itmo/M4236/Nikulin/intel_ocl/: Dockerfile  run.sh  setup.sh
itmo/M4236/Nikulin/intel_ocl/shared_folder/labs/include/: utils.hpp
itmo/M4236/Nikulin/intel_ocl/shared_folder/labs/matrix_conv/: CMakeLists.txt  main.cpp  matrix_conv.cl
itmo/M4236/Nikulin/intel_ocl/shared_folder/labs/scan/: CMakeLists.txt  main.cpp  scan.cl
